--- a/src/bootstrap-helper-blocks.sass
+++ b/src/bootstrap-helper-blocks.sass
@@ -19,15 +19,15 @@
 //
 // @author: Syaiful Shah Zinan (i.works@live.com)
 // @link: https://github.com/syaifulsz/bootstrap-helper-blocks
-// @since: 1.0.0
+// @since: 1.0.1
 
 @import mixins/blocks
 
-$helper-blocks--global: true
-$helper-blocks--xs: false
-$helper-blocks--sm: false
-$helper-blocks--md: false
-$helper-blocks--lg: false
+$helper-blocks--global: true !default
+$helper-blocks--xs: false !default
+$helper-blocks--sm: false !default
+$helper-blocks--md: false !default
+$helper-blocks--lg: false !default
 $grid: 12
 $prefix: 'block'
 
